--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
         <title>WCB Cafe - CONTACT</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1"><!--スマホ対応-->
+        <!--スマホ対応-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!--CSS-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
