--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
         <title>WCB Cafe - CONTACT</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
 
-        <!--スマホ対応-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1"><!--スマホ対応-->
 
         <!--CSS-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
